force-app/main/default/objects/Related_Accounts__c/Related_Accounts__c.object-meta.xml
<CustomObject>
    <description>This object is created for Contract Management.</description>
    <label>Related Account</label>
    <nameField>
        <displayFormat>RAN-{0000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>