force-app/main/default/objects/Related_Accounts__c/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Contract Management.</description>
    <label>Child Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parent Accounts</relationshipLabel>
    <relationshipName>Parent_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>