force-app/main/default/objects/Related_Accounts__c/fields/Child_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Child_Cust_ID__c</fullName>
    <externalId>true</externalId>
    <label>Child Cust ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>