force-app/main/default/objects/Related_Accounts__c/fields/Child_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Type__c</fullName>
    <label>Child Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Assingnor</fullName>
            </value>
            <value>
                <fullName>Authorized Reseller</fullName>
            </value>
            <value>
                <fullName>BD Team Linked</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Business Unit/Segment</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Buyer&apos;s Agent</fullName>
            </value>
            <value>
                <fullName>Co-Lessor</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Consortium/Group</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Consulting Services Beneficiary</fullName>
            </value>
            <value>
                <fullName>Custodian/Trustee</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Duplicate Accounts</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Financing Company</fullName>
            </value>
            <value>
                <fullName>Former Employee</fullName>
            </value>
            <value>
                <fullName>Former Employer</fullName>
            </value>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>Group Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>