force-app/main/default/objects/Related_Accounts__c/fields/Related_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Related Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>