force-app/main/default/objects/Related_Accounts__c/fields/Related_Account_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Status_c__c</fullName>
    <label>Related Account Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>