force-app/main/default/objects/Related_Accounts__c/fields/Roll_Up_Assets__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the assets from this account should be rolled up to the Customer Assets on the parent.</description>
    <inlineHelpText>True if the assets from this account should be rolled up to the Customer Assets on the parent.</inlineHelpText>
    <label>Roll Up Assets</label>
    <type>Checkbox</type>
</CustomField>