force-app/main/default/objects/Related_Accounts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Related_Account_Status_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>